# lg-orchestration-platform

./: .docker-cfgconfig.json  .dockerignore  .gitignore  .rooignore  .roomodes  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.python  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  ingress-svc-backup.yaml  parse_clippy.py  runner-logs.txt  test_batch.py
.docker-cfg/: config.json
.docker-cfg-rw/: config.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  e2e.yml  eval-correctness.yml  image-scan.yml  release.yml  vscode-publish.yml
.hypothesis/constants/: 1096c7c1fc7acccc  5b2c2ad015f3becd  5e000143e39aae6e  a3c7d83cc78bd953  b0343dea6d8b6cf6  (+4 more)
.roo/: mcp.json  system-prompt-architect  system-prompt-ask  system-prompt-code  system-prompt-debug  system-prompt-orchestrator
configs/: runtime.dev.toml  runtime.prod.toml  runtime.stage.toml
docs/: README.md  agent_collaboration_2026.md  architecture.md  deployment-edge.md  deployment_digitalocean.md  deployment_plan.md  digitalocean_troubleshooting_2026.md  gitops.md  improvement_plan.md  langgraph_plan.md  market_maturity_analysis.md  platform_console.md  quality_report.md  registry_setup.md  signing-setup.md  sota_2026_plan.md  wave7_spa_sse.md
eval/: run.py
examples/: README.md
prompts/: planner.md  router.md
py/: .coverage  coverage.xml  pyproject.toml
py/.hypothesis/constants/: 10c6b93678ae186b  1190d95918c01652  193dcf400d3d82e0  2312c1c2b8aca521  25b5a13e61ab2182  25cf9aa563983fff  2dcdc7d310f5ba24  2de3b06157493677  3b2014a9d1d445f3  3cd2698a0cb27eb6  3d7d476d398dd7ae  3d86af183230279a  3f375422d16bf42d  42e6c582ff5e7f57  455832ddd2b823b2  561aaf5aea63c2b8  5a4965ec4219d4b4  5c5a4803ec4c91fd  5f29b33f992c7032  60edaf722874bed2  647be75b6309b14a  661a0e1d04f80fc9  699f0ae7ab87f489  6feecdb9019068e7  73f221eabe73e119  77a5f47561dda415  7a1e6ef96ec175d8  7a86e1176298e6a4  7bdd9faf4b40a09b  7c680f32ee110a53  7f0b2a1334baf0bc  80c703dd87c1307f  8430d1dd4ee3924b  8a3f68ce41a2fd77  909f7b175ff7ff77  92e4208540e18def  9d1efba386416921  9deb83452033f6dc  a1219eb46250613c  a4620e59ddbeb5c0  (+23 more)
py/.hypothesis/tmp/: tmp02jmgu03  tmp13p2y_zf  tmp1g8wegyz  tmp3tx1mpm6  tmpd7g3yuea  tmpd84i8en2  tmpdexp93k0  tmpez_2bl0_  tmpf1_x57z1  tmpfntntjje  tmpggifator  tmpjg14cnw5  tmploma5omb  tmpmmevs6vt  tmpmsl5me_7  tmpoitz_d6m  tmpq5liaf57  tmpu8d40h_r  tmpzi91sq4j
py/src/lg_orch/: __init__.py  approval_policy.py  audit.py  auth.py  checkpointing.py  config.py  console.py  glean.py  graph.py  healing_loop.py  k8s_sandbox.py  logging.py  long_term_memory.py  main.py  memory.py  meta_graph.py  model_routing.py  multi_repo.py  policy.py  procedure_cache.py  rate_limit.py  remote_api.py  run_store.py  scip_index.py  state.py  trace.py  vericoding.py  visualize.py  worktree.py
py/src/lg_orch/api/: __init__.py  admin.py  approvals.py  metrics.py  service.py  streaming.py
py/src/lg_orch/backends/: postgres.py  redis.py
py/src/lg_orch/commands/: heal.py  run.py  serve.py  trace.py
py/src/lg_orch/nodes/: __init__.py  _planner_memory.py  _planner_prompt.py  _utils.py  coder.py  context_builder.py  executor.py  ingest.py  planner.py  policy_gate.py  reporter.py  router.py  verifier.py
py/src/lg_orch/spa/: __init__.py  index.html  main.js  package-lock.json  package.json  router.py  style.css  vite.config.js
py/src/lg_orch/spa/src/: App.tsx  main.tsx
py/src/lg_orch/tools/: __init__.py  inference_client.py  mcp_client.py  runner_client.py
py/tests/: test_api_streaming.py  test_approval_policy.py  test_audit.py  test_auth.py  test_canary.py  test_checkpointing.py  test_coder.py  test_config.py  test_context_builder.py  test_coverage_api_service.py  test_coverage_audit_executor_router.py  test_coverage_config_helpers.py  test_coverage_config_validation.py  test_coverage_helpers.py  test_coverage_logging_heal.py  test_coverage_memory_auth.py  test_coverage_memory_deep.py  test_coverage_remote_api.py  test_coverage_remote_api_handlers.py  test_coverage_service_deep.py  test_coverage_service_helpers.py  test_coverage_wave16.py  test_coverage_wave18.py  test_coverage_wave18b.py  test_coverage_wave18c.py  test_e2e.py  test_e2e_spa.py  test_eval_correctness.py  test_eval_run.py  test_executor.py  test_function_calling.py  test_glean.py  test_graph.py  test_healing_loop.py  test_hypothesis.py  test_inference_client.py  test_inference_client_stream.py  test_ingest.py  test_logging_module.py  test_long_term_memory.py  (+27 more)
rs/: Cargo.toml  deny.toml  rustfmt.toml
rs/.cargo/: config.toml
rs/guest-agent/: Cargo.toml  Dockerfile.rootfs
rs/guest-agent/src/: main.rs
rs/runner/: Cargo.toml
rs/runner/src/: approval.rs  auth.rs  config.rs  diagnostics.rs  envelope.rs  errors.rs  indexing.rs  invariants.rs  main.rs  sandbox.rs  snapshots.rs  vsock.rs
rs/runner/src/tools/: exec.rs  fs.rs  mcp.rs  mod.rs
rs/spa-leptos/: Cargo.toml  Trunk.toml  index.html
rs/spa-leptos/src/: app.rs  main.rs
rs/spa-leptos/src/api/: client.rs  sse.rs  types.rs
rs/spa-leptos/src/components/: approval_modal.rs  audit_trail.rs  command_bar.rs  diff_viewer.rs  metrics_cards.rs  mod.rs  pipeline_graph.rs  run_card.rs  run_stream.rs  split_pane.rs  status_badge.rs  tabs.rs  verifier_panel.rs
rs/spa-leptos/src/layouts/: console.rs
rs/spa-leptos/src/pages/: approvals.rs  dashboard.rs  mod.rs  run_detail.rs  settings.rs
rs/spa-leptos/style/: animations.css  global.css
schemas/: planner_output.schema.json  tool_envelope.schema.json  verifier_report.schema.json
scripts/: argocd_bootstrap.sh  azure_deploy_personal.cmd  bootstrap_local.cmd  build_guest_rootfs.cmd  build_guest_rootfs.sh  demo.tape  dev.cmd  dev.ps1  dev.sh  do_deploy.cmd  do_deploy.sh  do_deploy_k8s.sh  do_deploy_one_shot.sh  export_path.cmd  index_repo.sh  start_remote_stack.sh  verify-deployment.sh
vscode-extension/: .vscodeignore  LICENSE  PUBLISHING.md  README.md  esbuild.js  lg-orchestration-0.1.0.vsix  package-lock.json  package.json  tsconfig.json
(+72 files in other folders)
