[project]
name = "lg-orch"
version = "0.1.0"
requires-python = ">=3.12"
description = "LangGraph orchestration scaffold (Python) + restricted tool runner (Rust)."
readme = "../README.md"
license = { file = "../LICENSE" }
authors = [{ name = "LG Orchestration Platform contributors" }]
keywords = ["langgraph", "orchestration", "agent", "tools", "rust", "python"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27,<0.28",
  "langgraph>=0.2,<0.3",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.2,<3",
  "structlog>=24.2,<25",
  "tenacity>=8.3,<9",
]

[project.optional-dependencies]
dev = [
  "hypothesis>=6.100,<7",
  "hatchling>=1.25,<2",
  "mypy>=1.10,<2",
  "pytest>=8.2,<9",
  "ruff>=0.5,<1",
  "types-toml>=0.10.8.20240310",
]

[build-system]
requires = ["hatchling>=1.25,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lg_orch"]

[project.scripts]
lg-orch = "lg_orch.main:cli"

[dependency-groups]
dev = [
  "hypothesis>=6.100,<7",
  "hatchling>=1.25,<2",
  "mypy>=1.10,<2",
  "pytest>=8.2,<9",
  "ruff>=0.5,<1",
  "types-toml>=0.10.8.20240310",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "SIM",
  "RUF",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
pretty = true
show_error_codes = true
mypy_path = ["src"]
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

