[project]
name = "lg-orch"
version = "0.1.0"
requires-python = ">=3.12"
description = "LangGraph orchestration scaffold (Python) + restricted tool runner (Rust)."
license = { text = "MIT" }
authors = [
  {name = "Christian Meurer"},
]
keywords = ["langgraph", "orchestration", "agent", "tools", "rust", "python"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "jsonschema>=4.21",
  "prometheus-client>=0.20",
  "httpx>=0.27,<0.28",
  "PyJWT[crypto]>=2.8,<3",
  "langchain-core>=1.2.11,<2",
  "langgraph>=1.0.10,<2",
  "langgraph-checkpoint>=4.0.0,<5",
  "numpy>=1.26,<3",
  "opentelemetry-api>=1.24",
  "opentelemetry-sdk>=1.24",
  "opentelemetry-exporter-otlp-proto-grpc>=1.24",
  "opentelemetry-instrumentation-fastapi>=0.45b0",
  "opentelemetry-instrumentation-httpx>=0.45b0",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.3,<3",
  "PyYAML>=6.0,<7",
  "structlog>=24.2,<25",
  "tenacity>=8.3,<9",
]

[project.optional-dependencies]
redis = ["redis[hiredis]>=5.0", "msgpack>=1.0"]
postgres = ["psycopg[binary,pool]>=3.1"]

[build-system]
requires = ["hatchling>=1.25,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lg_orch"]

[project.scripts]
lg-orch = "lg_orch.main:cli"

[dependency-groups]
dev = [
  "fakeredis>=2.20",
  "hypothesis>=6.100,<7",
  "hatchling>=1.25,<2",
  "mypy>=1.10,<2",
  "pip-audit>=2.10,<3",
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0,<6",
  "ruff>=0.5,<1",
  "types-toml>=0.10.8.20240310",
  "types-PyYAML>=6.0,<7",
  "fastapi>=0.111,<1",
  "httpx>=0.27,<0.28",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "SIM",
  "RUF",
]

[tool.ruff.lint.per-file-ignores]
# visualize.py embeds HTML/CSS/JS template strings that cannot be split
"src/lg_orch/visualize.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
pretty = true
show_error_codes = true
mypy_path = ["src"]
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=lg_orch --cov-report=xml:coverage.xml"
markers = [
    "e2e: end-to-end smoke tests (run with LG_E2E=1)",
]

