[workspace]
resolver = "2"
members = [
  "runner",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["json"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "process", "time", "fs", "io-util"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "registry"] }
tracing-opentelemetry = "0.24"
opentelemetry = { version = "0.23", features = ["trace"] }
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.16", features = ["tonic", "grpc-tonic"] }
opentelemetry-semantic-conventions = "0.15"
uuid = { version = "1.8", features = ["v4", "fast-rng"] }
walkdir = "2.5"
regex = "1.10"
sha2 = "0.10"
hmac = { version = "0.12", features = ["std"] }
hex = "0.4"
rand = "0.8"
pdf-extract = "0.7"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
