[package]
name = "lula-guest-agent"
version = "0.1.0"
edition = "2021"
license.workspace = true

[[bin]]
name = "lula-guest-agent"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "process", "time"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
