[package]
name = "lg-runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
libc.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
globset.workspace = true
hmac.workspace = true
hex.workspace = true
rand.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["signal"] }
tree-sitter.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
uuid.workspace = true
walkdir.workspace = true
regex.workspace = true
sha2.workspace = true
pdf-extract.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

[features]
verify = []

[dev-dependencies]
tempfile = "3.10"
proptest = "1.4"

